--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   background-color: rgb(17 24 39);
 }
 
+body {
+  max-width: '100vh';
+  background-color: rgb(17 24 39);
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
